# endtoend-mlops

./: .gitignore  README.md
projects/covid_chest_classification/notebooks/: data_exploration.ipynb  grad_cam.py  ml_flow.py  training.ipynb  training.py
projects/covid_chest_classifier/: .gitignore  README.md  dvc.yaml  main.py  params.yaml  pyproject.toml  pyproject.toml.bak  requirements.txt  scores.json  setup.py  template.py
projects/covid_chest_classifier/config/: config.yaml
projects/covid_chest_classifier/covid_chest_classifier.egg-info/: PKG-INFO  SOURCES.txt
projects/covid_chest_classifier/notebooks/: 02_prepare_base_model.ipynb  03_model_training.ipynb  04_model_evaluation_with_mlflow.ipynb  data_ingestion.ipynb  experiments.ipynb  training.ipynb
projects/covid_chest_classifier/src/: callbacks.py  training.py
projects/covid_chest_classifier/src/ccclassifier/: __init__.py
projects/covid_chest_classifier/src/ccclassifier.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
projects/covid_chest_classifier/src/ccclassifier/components/: data_ingestion.py  model_evaluation_mlflow.py  model_training.py  prepare_base_model.py
projects/covid_chest_classifier/src/ccclassifier/config/: configuration.py
projects/covid_chest_classifier/src/ccclassifier/entity/: config_entity.py
projects/covid_chest_classifier/src/ccclassifier/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_model_training.py  stage_04_model_evaluation.py
projects/covid_chest_classifier/src/ccclassifier/utils/: common.py
